{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 41,
  "lineage": "50d4fb3d-1151-cc2e-c9d8-8a887f198ca5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-05T05:32:29.591-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fine-program-407200/global/firewalls/flask-app-firewall",
            "log_config": [],
            "name": "flask-app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/fine-program-407200/global/networks/my-custom-mode-network",
            "priority": 1000,
            "project": "fine-program-407200",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-program-407200/global/firewalls/flask-app-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-05T05:32:29.587-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fine-program-407200/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/fine-program-407200/global/networks/my-custom-mode-network",
            "priority": 1000,
            "project": "fine-program-407200",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-program-407200/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20231115",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fine-program-407200/zones/us-west1-a/disks/flask-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fine-program-407200/zones/us-west1-a/instances/flask-vm",
            "instance_id": "4413707266390399078",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "ErFjYLwFpj4=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python3-pip rsync; pip install flask",
            "name": "flask-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.168.183.15",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fine-program-407200/global/networks/my-custom-mode-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fine-program-407200/regions/us-west1/subnetworks/my-custom-subnet",
                "subnetwork_project": "fine-program-407200"
              }
            ],
            "project": "fine-program-407200",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-program-407200/zones/us-west1-a/instances/flask-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/fine-program-407200/global/networks/my-custom-mode-network",
            "mtu": 1460,
            "name": "my-custom-mode-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "fine-program-407200",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-program-407200/global/networks/my-custom-mode-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-05T05:32:30.639-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/fine-program-407200/regions/us-west1/subnetworks/my-custom-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-custom-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/fine-program-407200/global/networks/my-custom-mode-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fine-program-407200",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-program-407200/regions/us-west1/subnetworks/my-custom-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}